# simulation-over-web-socket

./: .dockerignore  .env.template  Dockerfile.frontend  Dockerfile.wasm-frontend  Dockerfile.ws-server  README.md  docker-compose.yml  nginx.conf
backend/: Cargo.toml
backend/nbody/: Cargo.toml
backend/nbody/src/: lib.rs  physics.rs  quadtree.rs  simulation.rs
backend/wasm-bindings/: Cargo.toml
backend/wasm-bindings/src/: lib.rs
backend/wasm-nbody/: Cargo.toml
backend/wasm-nbody/src/: lib.rs
backend/ws-server/: Cargo.toml
backend/ws-server/src/: handler.rs  main.rs  state.rs  ws.rs
frontend/: package-lock.json  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/components/: App.tsx  Canvas.tsx  RightPanel.tsx  Surface.tsx
frontend/src/services/: InteractionService.ts
frontend/src/stores/: CameraStore.ts  SimulationStore.ts
frontend/src/utils/: initialization.ts
