[workspace]
members = ["./nbody", "./ws-server", "./wasm-bindings"]
resolver = "2"

[workspace.dependencies]
nbody = { path = "./nbody" }
ws-server = { path = "./ws-server" }
wasm-bindings = { path = "./wasm-bindings" }

[profile.release]
opt-level = 3
debug = false
strip = "none"
debug-assertions = false
overflow-checks = false
lto = "thin"
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
