[package]
name = "wasm-bindings"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
bincode = "1.3.3"
flate2 = "1.0.35"
nbody = { workspace = true }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = { version = "1.0.133" }
tsify = { version = "0.4.5" }
wasm-bindgen = { version = "0.2.95" }
