[package]
name = "ws-server"
version = "0.0.0"
edition = "2021"


[dependencies]
nbody = { workspace = true }
wasm-bindings = { workspace = true }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = { version = "1.0.133" }
tsify = { version = "0.4.5" }
wasm-bindgen = { version = "0.2.95" }
futures = { version = "0.3.31" }
futures-util = { version = "0.3.31" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26.1" }
